# nixops-datadog

./: README.md  pyproject.toml  release.nix  setup.py
nix/: default.nix
nixops_datadog/: datadog_utils.py  plugin.py
nixops_datadog/nix/: default.nix
nixops_datadog/resources/: __init__.py  datadog_monitor.py  datadog_screenboard.py  datadog_timeboard.py
