[tool.poetry]
name = "nixops_datadog"
version = "1.0"
description = "NixOps plugin for DataDog"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
license = "MIT"
include = [ "nixops_datadog/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/adisbladis/nixops.git", rev = "poetry2nix-plugins"}
datadog = "^0.35"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
datadog = "nixops_datadog.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
